# fury

./: .dockerignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: fury-deploy-lambdafunctions.yml
