[project]
name = "international-harvester"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "gevent>=25.4.1",
    "playwright>=1.55.0",
    "pyyaml>=6.0.2",
]


[tool.ruff]
line-length = 88
indent-width = 4

target-version="py313"

[tool.ruff.lint]
select = ["I"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["ih"]



[tool.uv.workspace]
members = [
    "packages/*"
]


[tool.pytest.ini_options]
markers = ["integration", "slow"]
filterwarnings = ["ignore:datetime.*:DeprecationWarning"]
# log_cli = true
# log_cli = false
# log_cli_level = "INFO"

# Prevent super-slow discovery of tests in CDK packages.
norecursedirs = ["packages/*-cdk"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.44",
    "mkdocs-puml>=2.3.0",
    "mkdocstrings>=0.27.0",
    "mkdocs-monorepo-plugin>=1.1.0",
    "mkdocs-include-markdown-plugin>=7.0.1",
    "mkdocstrings-python>=1.12.2",
    "pre-commit>=4.1.0",
    "ipython>=8.32.0",
    "moto[dynamodb,s3,ssm]>=5.1.4",
    "ipykernel>=6.29.5",
    "boto3-stubs[cloudformation,sqs,ssm]>=1.35.33",
    "pytest>=8.3.5",
    "coverage>=7.8.0",
    "aws-lambda-typing>=2.20.0",
]
lint = ["ruff>=0.6.9"]
docs = [
    "mkdocstrings-python>=1.12.2",
]

[tool.setuptools]
py-modules = []

[tool.pre-commit-update]
dry_run = true
verbose = true
warnings = true
